--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -502,7 +502,7 @@ As mentioned earlier, this is not always the case: sometimes including more
 predictors can negatively impact the prediction performance on unseen 
 test data.
 
-## Multicollinearity and Outliers
+## Multicollinearity and outliers
 
 TODO
 
