minor eds to reg2

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -367,15 +367,14 @@ As in K-NN classification and K-NN regression, we can move beyond the simple
 case of only one predictor to the case with multiple predictors,
 known as *multivariate linear regression*. 
 To do this, we follow a very similar approach to what we did for
-K-NN regression; but recall that we do not need to use cross-validation to choose any parameters,
+K-NN regression: we just add more predictors to the model formula in the 
+recipe. But recall that we do not need to use cross-validation to choose any parameters,
 nor do we need to standardize (i.e., center and scale) the data for linear regression. 
-Note once again that have the same concerns regarding multiple predictors
+Note once again that we have the same concerns regarding multiple predictors
 as in the settings of multivariate K-NN regression and classification: more predictors is **not** always
-better, and the choice of which predictors to use has a potentially large influence
-on the quality of predictions. Because the same predictor selection 
+better. But because the same predictor selection 
 algorithm from the classification chapter extends to the setting of linear regression,
-we will not cover it again in this chapter.
-
+it will not be covered again in this chapter.
 
 We will demonstrate multivariate linear regression using the Sacramento real estate 
 data with both house size
