changed footage to feet

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -100,10 +100,10 @@ the data as a scatter plot where we place the predictor/explanatory variable
 (house size) on the x-axis, and we place the target/response variable that we
 want to predict (sale price) on the y-axis.
 
-```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage)"}
+```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet)"}
 eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
-  xlab("House size (square footage)") +
+  xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format())
 eda
@@ -148,10 +148,10 @@ you can see that we have no
 observations of a house of size *exactly* 2,000 square feet. How can we predict
 the sale price? 
 
-```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with vertical line indicating 2,000 square feet on x-axis"}
+```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with vertical line indicating 2,000 square feet on x-axis"}
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   geom_point() +
-  xlab("House size (square footage)") +
+  xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   geom_vline(xintercept = 2000, linetype = "dotted")
@@ -171,7 +171,7 @@ nearest_neighbours <- small_sacramento %>%
 nearest_neighbours
 ```
 
-```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with lines to 5 nearest neighbours"}
+```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with lines to 5 nearest neighbours"}
 nearest_neighbours <- mutate(nearest_neighbours, twothou = rep(2000, 5))
 nn_plot <- small_plot +
   geom_segment(
@@ -195,7 +195,7 @@ prediction <- nearest_neighbours %>%
 prediction
 ```
 
-```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with predicted price for a 2,000 square-foot house based on 5 nearest neighbours represented as a red dot"}
+```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with predicted price for a 2,000 square-foot house based on 5 nearest neighbours represented as a red dot"}
 nn_plot +
   geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5)
 ```
@@ -361,7 +361,7 @@ for (i in 1:6) {
 
       plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
         geom_point(alpha = 0.4) +
-        xlab("House size (square footage)") +
+        xlab("House size (square feet)") +
         ylab("Price (USD)") +
         scale_y_continuous(labels = dollar_format()) +
         geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
@@ -369,7 +369,7 @@ for (i in 1:6) {
   } else {
       plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
         geom_point(alpha = 0.4) +
-        xlab("House size (square footage)") +
+        xlab("House size (square feet)") +
         ylab("Price (USD)") +
         scale_y_continuous(labels = dollar_format()) +
         geom_hline(data = sacr_preds, mapping = aes(x = sqft), yintercept = mean(sacr_preds$price), color = "blue") +
@@ -481,7 +481,7 @@ sacr_preds <- sacr_fit %>%
 plot_final <- ggplot() +
   geom_point(data = sacramento_train, mapping = aes(x = sqft, y = price), alpha = 0.4) +
   geom_line(data = sacr_preds, mapping = aes(x = sqft, y = .pred), color="blue") +
-  xlab("House size (square footage)") +
+  xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   ggtitle(paste0("K = ", kmin))
