--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -532,26 +532,26 @@ house size (measured in square feet) as well as number of bedrooms as our
 predictors, and continue to use house sale price as our outcome/target variable
 that we are trying to predict.
 It is always a good practice to do exploratory data analysis, such as
-visualizing the data, before we start modeling the data. Thus the first thing
-we will do is use ggpairs (from the `GGally` package) to plot all the variables
-we are interested in using in our analyses.
+visualizing the data, before we start modeling the data. Figure \@ref(fig:07-bedscatter)
+shows that the number of bedrooms might provide useful information
+to help predict the sale price of a house.
 
-```{r 07-ggpairs, fig.height = 5, fig.width = 6, fig.cap = "Scatterplots of each pair of variables (price, house size, and the number of bedrooms) are displayed in the figure's bottom left corner. Correlation coefficients are shown in the top right corner. The distributions of price, house size and number of bedrooms are each shown along the diagonal."}
-library(GGally)
-plot_pairs <- sacramento %>%
-  select(price, sqft, beds) %>%
-  ggpairs()
-plot_pairs
+```{r 07-bedscatter, fig.height = 5, fig.width = 6, fig.cap = "Scatter plot of the sale price of houses versus the number of bedrooms"}
+plot_beds <- sacramento %>%
+             ggplot(aes(x = beds, y = price)) +
+             geom_point(alpha = 0.4) +
+             labs(x = 'Number of Bedrooms', y = 'Price (USD)')
+plot_beds
 ```
 
-Figure \@ref(fig:07-ggpairs) shows that generally, as both house size and
-number of bedrooms increase, so does sale price. Does adding the number of bedrooms
+Figure \@ref(fig:07-bedscatter) shows that as the number of bedrooms increases,
+the house sale price tends to increase as well, but that the relationship
+is quite weak. Does adding the number of bedrooms
 to our model improve our ability to predict price? To answer that
-question, we will have to estimate the test error for a K-NN regression
+question, we will have to create a new K-NN regression
 model using house size and number of bedrooms, and then we can compare it to
-the test error for the model we previously came up with that only used house
-size to see if it is smaller (decreased test error indicates increased
-prediction quality). Let's do that now!
+the model we previously came up with that only used house
+size. Let's do that now!
 
 First we'll build a new model specification and recipe for the analysis. Note that
 we use the formula `price ~ sqft + beds` to denote that we have two predictors,
@@ -581,7 +581,8 @@ sacr_multi
 ```
 Here we see that the smallest estimated RMSPE from cross-validation occurs when $K =$ `r sacr_k`.
 If we want to compare this multivariate K-NN regression model to the model with only a single
-predictor *as part of the model tuning process* (i.e., to decide which one we should use to make future predictions),
+predictor *as part of the model tuning process* (e.g., if we are running forward selection as described
+in the chapter on evaluating and tuning classification models),
 then we must compare the accuracy estimated using only the training data via cross-validation.
 Looking back, the estimated cross-validation accuracy for the single-predictor 
 model was `r format(round(sacr_min$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
