fixing plot axes, adding reference to data set, one more pass through to check for clarity

--- a/references.bib
+++ b/references.bib
@@ -87,3 +87,10 @@
     note = {[Online; accessed May 11, 2021]},
     url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}
 }
+
+@online{insideairbnb,
+    author = {Murray Cox},
+    title = {Inside Airbnb},
+    url = {http://insideairbnb.com/},
+  urldate = {2020-09-01}
+}
