--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -6,7 +6,7 @@ library(gridExtra)
 library(tidyverse)
 require(grid) #  grid.bezier()
 
-options(pillar.sigfig = 3) # set number of digits to display in output to match writing
+options(digits = 3) # set number of digits to display in output to match writing
 
 max_count <- function(dist) {
   max(ggplot_build(dist)$data[[1]]$count)
@@ -79,15 +79,15 @@ Note that proportions are not the *only* kind of population parameter we might b
 
 *What is the average price-per-month of studio apartment rentals in Vancouver, Canada?*
 
-The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment rental in Vancouver will have the same price-per-month. The student might be interested in how much monthly prices vary and want to find a measure of the rentals' spread (or variability), such as the standard deviation. We might be interested in the fraction of studio apartment rentals that cost more than \$1000 per month. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
+The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment rental in Vancouver will have the same price-per-month. The student might be interested in how much monthly prices vary and want to find a measure of the rentals' spread (or variability), such as the standard deviation. The student might be interested in the fraction of studio apartment rentals that cost more than \$1000 per month. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
 
-1. Using categorical observations to estimate the proportion of each category
+1. Using categorical observations to estimate the proportion of a category
 2. Using quantitative observations to estimate the average (or mean)
 
 ## Sampling distributions
 
 ### Sampling distributions for proportions
-We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/). Airbnb is an online marketplace for arranging vacation rentals and places to stay. The data set, `airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data includes an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
+We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/) [@insideairbnb]. Airbnb is an online marketplace for arranging vacation rentals and places to stay. The data set, `airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data includes an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
 
 ```{r 11-example-means1, echo = FALSE, message = FALSE, warning = FALSE}
 airbnb <- read_csv("data/listings.csv") %>%
@@ -102,8 +102,7 @@ airbnb <- airbnb %>%
 ```{r}
 airbnb
 ```
-Suppose the city of Vancouver wants to know how many Airbnb places are listed as entire homes and apartments (rather than as private or shared rooms). They could use the information to 
-to help plan city bylaws. Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
+Suppose the city of Vancouver wants information about Airbnb rentals to help plan city bylaws, and they want to know how many Airbnb places are listed as entire homes and apartments (rather than as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
 
 ```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE }
 library(tidyverse)
@@ -127,7 +126,7 @@ population_proportion <- airbnb %>%
 
 
 
-From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the population parameter. Remember, this parameter value is usually unknown in real data analysis problems. Therefore normally, we can't compute it. Perhaps instead, we can approximate it with a small number of data?
+From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the population parameter. Remember, this parameter value is usually unknown in real data analysis problems. Therefore normally, we can't compute it.  Instead, perhaps we can approximate it with a small set of data.
 
 Let's see what would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population). Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
@@ -142,7 +141,7 @@ airbnb_sample_1
 ```
 
 Here we see that the proportion of entire home/apartment listings in this random sample is
-`r round(airbnb_sample_1$prop,2)`. Wow, that's close to our true population value! But remember, we just used a random sample of 40 so this value is our *estimate* &mdash; our best guess of our population parameter using this sample. Given that it is a single
+`r round(airbnb_sample_1$prop,2)`. Wow, that's close to our true population value! But remember, we just used a random sample of 40 so this value is an *estimate* &mdash; our best guess of our population parameter using this sample. Given that it is a single
 value that we are estimating, we often refer to it as a **point estimate**.
 The keyword there is *random* -- if we were to take another random sample of 40 listings from the population, we wouldn't get the same answer:
 
@@ -156,14 +155,13 @@ airbnb_sample_2 <- summarize(sample_2,
 airbnb_sample_2
 ```
 
-Confirmed! We get a different value for our estimate this time so that means that our point estimate might be unreliable! If we were to do this again, another random sample could also give a different result. Estimates vary from sample to sample 
-due to **sampling variability**. 
+Confirmed! We get a different value for our estimate this time so that means that our point estimate might be unreliable!  Estimates vary from sample to sample 
+due to **sampling variability**.  So if we were to do this again, another random sample could also give a different result.
 
 But just how much should we expect the estimates of our random
-samples to vary? To understand this, we will simulate taking more samples
+samples to vary? To understand this, we will simulate taking many samples (rather than just two)
 of size 40 from our population of listings and calculate the 
-proportion of entire home/apartment listings in each sample. We can then
-visualize the distribution of sample proportions we calculate. The distribution
+proportion of entire home/apartment listings in each sample. From this simulation, will get many sample proportions, which we can visualize on a histogram. The distribution
 of the estimate for all possible samples of a given size (which we commonly refer to as $n$) from a population is
 called a **sampling distribution**. The sampling distribution will help us see
 how much we would expect our sample proportions from this population to vary
@@ -219,9 +217,9 @@ sample proportion that is larger or smaller than the population proportion, but 
 ### Sampling distributions for means 
 
 In the previous section, our variable of interest&mdash; `room_type` &mdash;was
-*categorical*, and the population parameter of interest was the proportion of listings where the room type was "entire home/apt". As mentioned in the chapter introduction, there are many choices of the population parameter for each type of observed variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC, may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. Knowing the average
+*categorical*, and the population parameter was a proportion. As mentioned in the chapter introduction, there are many choices of the population parameter for each type of variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC, may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. Knowing the average
 could help them tell whether a particular listing is overpriced.
-This section will study the case where we are interested in the population mean of a quantitative variable.
+Let's look at the case where we are interested in the population mean of a quantitative variable.
 
 We can visualize the population distribution of the price per night with a histogram. 
 ```{r, echo = F}
@@ -233,11 +231,11 @@ population_distribution <- ggplot(airbnb, aes(x = price)) +
   xlab("Price per night ($)")
 population_distribution
 ```
-From Figure \@ref(fig:11-example-means2), we see that the population distribution has one peak and is skewed (not symmetric) &mdash;most of the listings
+From Figure \@ref(fig:11-example-means2), we see that the population distribution has one peak and is skewed (i.e. not symmetric) since most of the listings
 are less than \$250 per night, but a small proportion of listings cost more
 than that, creating a long tail on the histogram's right side. 
 
-We can also calculate the population mean, the average price per night for all the Airbnb listings. 
+Along with visualizing the population, we can calculate the population mean, the average price per night for all the Airbnb listings. 
 ```{r 11-example-means-popmean, echo = TRUE, message = FALSE, warning = FALSE}
 population_parameters <- airbnb %>%
   summarize(pop_mean = mean(price))
@@ -254,7 +252,8 @@ one_sample <- airbnb %>%
   rep_sample_n(40)
 ```
 
-We can create a histogram to visualize the distribution of observations in the sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
+We can create a histogram to visualize the distribution of observations in the sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean of our sample.
+
 ```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -264,9 +263,11 @@ estimates <- one_sample %>%
   summarize(sample_mean = mean(price))
 estimates
 ```
+
+From the sample of 40, the average is \$`r round(estimates$sample_mean, 2)`.
+This number is a **point estimate** for the mean of the full population.
 Recall that the population mean 
-was \$`r round(population_parameters$pop_mean,2)`. We see that our point
-estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So we can see our estimate was fairly close to the population parameter: the mean was 
+was \$`r round(population_parameters$pop_mean,2)`. So our estimate was fairly close to the population parameter: the mean was 
 about `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% off.
 Note that we usually cannot compute the estimate's accuracy in practice since we do not have access to the population parameter; if we did, we wouldn't need to estimate it!
 
@@ -357,7 +358,7 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) %>%
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Sample mean price per night($)") +
-  ggtitle("n = 20")
+  ggtitle("n = 20") 
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
@@ -646,25 +647,28 @@ sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Sample mean price per night ($)")
 
-max_height<- max(max_count(sampling_dist), max_count(boot_est_dist))
-
+minimum_x <- min_x(sampling_dist)
+maximum_x <- max_x(boot_est_dist)
 
 sampling_dist <- sampling_dist + 
   annotate("text",
-    x = max_x(sampling_dist), max_height, hjust = 1, vjust = 1,
+    x = max_x(sampling_dist), y = 2500, hjust = 1, vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))
   ) +
-  geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") 
+  geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") + 
+  xlim(minimum_x, maximum_x) +
+  ylim(0, 2500) 
 
 annotated_boot_est_dist <- boot_est_dist +
   annotate("text",
-    x = max_x(boot_est_dist), max_height, hjust = 1, vjust = 1,
+    x = max_x(boot_est_dist), 2500, hjust = 1, vjust = 1,
     label = paste("mean = ", round(mean(boot20000_means$mean), 2))
   ) +
   geom_vline(xintercept = mean(boot20000_means$mean), col = "red")
 
-grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + ggtitle("Sampling distribution"),
-  annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution"),
+grid.arrange(sampling_dist +
+               ggtitle("Sampling distribution"),
+  annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution") + ylim(0, 2500),
   ncol = 2
 )
 ```
