changing plot axes, going through chapter and making minor fixes

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -389,7 +389,7 @@ annotated_sampling_dist_20 <- sampling_distribution_20 +
   ggtitle("n = 20") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))
+    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
   )
 #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 3,
@@ -400,7 +400,7 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
   ## x limits set the same as n = 20 graph, y is this graph
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 2))
+    label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1))
   ) #+
 # annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
 #                 label = paste("sd = ", round(sd(sample_estimates_50$sample_mean), 1)))
@@ -409,7 +409,7 @@ annotated_sampling_dist_100 <- sampling_distribution_100 +
   geom_vline(xintercept = mean(sample_estimates_100$sample_mean), col = "red") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 2))
+    label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 1))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_100$sample_mean), 1)))
@@ -418,7 +418,7 @@ annotated_sampling_dist_500 <- sampling_distribution_500 +
   geom_vline(xintercept = mean(sample_estimates_500$sample_mean), col = "red") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 2))
+    label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 1))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_500$sample_mean), 1)))
@@ -650,26 +650,25 @@ sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
 minimum_x <- min_x(sampling_dist)
 maximum_x <- max_x(boot_est_dist)
 
-sampling_dist <- sampling_dist + 
-  annotate("text",
-    x = max_x(sampling_dist), y = 2500, hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))
-  ) +
-  geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") + 
+annotated_sampling_dist <- sampling_dist+ 
   xlim(minimum_x, maximum_x) +
-  ylim(0, 2500) 
+  ylim(0, 2500) +  
+  annotate("text",
+           x = maximum_x, 
+           y = 2000,  hjust = 1, vjust = 1,
+           label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))) +
+    geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") 
 
 annotated_boot_est_dist <- boot_est_dist +
+  xlim(minimum_x, maximum_x) + ylim(0, 2500) + 
   annotate("text",
-    x = max_x(boot_est_dist), 2500, hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(boot20000_means$mean), 2))
-  ) +
-  geom_vline(xintercept = mean(boot20000_means$mean), col = "red")
+    x = maximum_x, y = 2000, hjust = 1, vjust = 1,
+    label = paste("mean = ", round(mean(boot20000_means$mean), 2)))  +
+    geom_vline(xintercept = mean(boot20000_means$mean), col = "red") 
 
-grid.arrange(sampling_dist +
-               ggtitle("Sampling distribution"),
-  annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution") + ylim(0, 2500),
-  ncol = 2
+grid.arrange(annotated_sampling_dist + ggtitle("Sampling distribution"),
+             annotated_boot_est_dist +  ggtitle("Bootstrap distribution"),
+             ncol = 2
 )
 ```
 
