--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -629,42 +629,36 @@ boot20000_means
 tail(boot20000_means)
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Sample mean price per night ($)")
+  xlab("Sample mean price per night ($)") 
 boot_est_dist
 ```
 
 Let's compare our bootstrap distribution with the true sampling distribution (taking many samples from the population). 
 
 ```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", out.height="50%"}
-
 samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 
 sample_estimates <- samples %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
 
-sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
+sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean),  
+                          xlim(90,250), ylim=c(0, max_count(boot_est_dist))) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Sample mean price per night ($)")
+  xlab("Sample mean price per night ($)")  
 
-minimum_x <- min_x(sampling_dist)
-maximum_x <- max_x(boot_est_dist)
-
-annotated_sampling_dist <- sampling_dist+ 
-  xlim(minimum_x, maximum_x) +
-  ylim(0, 2500) +  
+annotated_sampling_dist <- sampling_dist+  
   annotate("text",
-           x = maximum_x, 
-           y = 2000,  hjust = 1, vjust = 1,
+           x = max_x(boot_est_dist), 
+           y = 2000,
            label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))) +
     geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") 
-
-annotated_boot_est_dist <- boot_est_dist +
-  xlim(minimum_x, maximum_x) + ylim(0, 2500) + 
+annotated_boot_est_dist <- boot_est_dist +   xlim(c(90,250)) + 
   annotate("text",
-    x = maximum_x, y = 2000, hjust = 1, vjust = 1,
+    x = max_x(boot_est_dist), y = 2000, vjust = 1, hjust = 1, 
     label = paste("mean = ", round(mean(boot20000_means$mean), 2)))  +
     geom_vline(xintercept = mean(boot20000_means$mean), col = "red") 
+
 
 grid.arrange(annotated_sampling_dist + ggtitle("Sampling distribution"),
              annotated_boot_est_dist +  ggtitle("Bootstrap distribution"),
