--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -105,7 +105,7 @@ options(warn = -1)
 
 ### The Mauna Loa CO2 data set 
  The [Mauna Loa CO2 data set](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html), curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Pieter.Tans/) and [Dr. Ralph Keeling, Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/)
-records the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from 1959 onwards.
+records the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from 1959 onwards [@maunadata].
 
 **Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
 ```{r 03-data-co2, warning=FALSE, message=FALSE}
@@ -293,7 +293,7 @@ faithful_scatter
 
 ### The Canadian languages data set
 
-We will return to the `can_lang` data set, which contains counts of languages from the 2016 Canadian census.
+We will return to the `can_lang` data set [@timbers2020canlang], which contains counts of languages from the 2016 Canadian census.
 
 **Question:** Is there a relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home? And is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)?
 
