--- a/references.bib
+++ b/references.bib
@@ -87,3 +87,9 @@
     note = {[Online; accessed May 11, 2021]},
     url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}
 }
+
+@misc{maunadata,
+author = {Pieter Tans and Ralph Keeling},
+title = {Trends in Atmospheric Carbon Dioxide},
+howpublished= {\url{https://gml.noaa.gov/ccgg/trends/data.html}}}
+
